[gd_scene load_steps=9 format=3 uid="uid://bewqtxc35ijup"]

[ext_resource type="Script" uid="uid://drgjg7j6u7mc3" path="res://comet.gd" id="1_imve7"]
[ext_resource type="Texture2D" uid="uid://wjkqki0wdtx1" path="res://assets/Comet.png" id="2_imve7"]
[ext_resource type="PackedScene" uid="uid://csfuach5v87a2" path="res://health_component.tscn" id="3_3s670"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4vntk"]
atlas = ExtResource("2_imve7")
region = Rect2(16, 0, 16, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5y65"]
atlas = ExtResource("2_imve7")
region = Rect2(32, 0, 16, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_yruee"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vntk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5y65")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ntnkt"]
radius = 5.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_imve7"]
radius = 6.0
height = 12.0

[node name="Comet" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_imve7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yruee")
autoplay = "default"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -1)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_ntnkt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0.5)
shape = SubResource("CapsuleShape2D_imve7")

[node name="HealthComponent" parent="." instance=ExtResource("3_3s670")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
